--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+
 :root {
   --background: #f9fafb;
   --foreground: #171717;
@@ -23,4 +24,10 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.usa-step-indicator__segments > li:last-child {
+  flex-grow: 0;
+  flex-wrap: nowrap;
+  white-space: nowrap;
 }
